<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Home Command Node</string>
    <string name="title_section2">View</string>
    <string name="title_section1">Control</string>
    <string name="menu_settings">Settings</string>
    <string name="server_ip">Server IP:</string>
    <string name="encrypt_cmd">Encrpyt Command String Also?</string>
    <string name="port">Port: </string>
    <string name="default_port">8888</string>
    <string name="shared_key">Shared Key:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>