<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/server_ip" />
        <EditText 
            android:inputType="textNoSuggestions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:id="@+id/server_ip" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/port" />
        <EditText 
            android:inputType="number"
            android:hint="@string/default_port"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:id="@+id/port" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button 
            android:id="@+id/dialog_save"
            android:text="@string/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        <Button 
            android:id="@+id/dialog_close"
            android:text="@string/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>